Fix horizontal scrolling of function code <pre>

--- a/public/app/styles.less
+++ b/public/app/styles.less
@@ -4,8 +4,10 @@ textarea {
 
 pre {
   padding: 0px;
+  overflow-x: auto;
 }
 
-code {
-  white-space: wrap;
+pre code {
+  overflow-wrap: normal;
+  white-space: pre;
 }
